--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather Insurance</title>
+  <title>Weather Insurance v2</title>
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 </head>
 <body>
@@ -50,6 +50,7 @@
     <button id="cc-get-address">Get New Contract Address</button>
   </div>
   <div id="cc-display-address"> </div>
+  <div id="cc-display-advice"> </div>
 
   <div id="contract-input-fields">
     <br>
