improved chainlink functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,12 +30,12 @@
   duration<input id="cc-input-box-drought-threshold" type="text" placeholder="3"/> (in days)
   </div>
   <div>
-  duration<input id="cc-input-box-duration" type="text" placeholder="300"/> (in seconds; 60s == 1 day)  
+  duration<input id="cc-input-box-duration" type="text" placeholder="300"/> (in seconds; 60s == 1 day for testing purposes)  
   </div>
-  premium<input id="cc-input-box-premium" type="text" placeholder="50000000000"/> (multiply dollar amount by 100000000)
+  premium<input id="cc-input-box-premium" type="text" placeholder="500"/> (in dollars)
   </div>
   <div>
-  payout<input id="cc-input-box-payout" type="text" placeholder="100000000000"/> (multiply dollar amount by 100000000)
+  payout<input id="cc-input-box-payout" type="text" placeholder="1000"/> (in dollars)
   </div>
   <div>
   location<input id="cc-input-box-location" type="text" placeholder="Iowa"/> 
