--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,9 +27,6 @@
   client address<input id="cc-input-box-client" type="text" placeholder="0x2Ec936D225AB1D3927ebe8fA92b905B99b97cc36"/> (address)
   </div>
   <div>
-  duration<input id="cc-input-box-drought-threshold" type="text" placeholder="3"/> (in days)
-  </div>
-  <div>
   duration<input id="cc-input-box-duration" type="text" placeholder="300"/> (in seconds; 60s == 1 day for testing purposes)  
   </div>
   premium<input id="cc-input-box-premium" type="text" placeholder="500"/> (in dollars)
@@ -41,6 +38,7 @@
   location<input id="cc-input-box-location" type="text" placeholder="Iowa"/> 
   </div>
   <button id="cc-input-button">Create Contract</button>
+  <div>To create new contracts, the contract factory 0xF4Ae80EADd943651D28BB426759Fb09915D59A74 must be funded with enough LINK & ETH</div>
   
 
   <div>_________________</div>
